--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@ html, body {
     height: 100vh;
     margin: 0;
     overflow: hidden;
+    background-color: #2A3132;
 }
  
 
@@ -34,11 +35,13 @@ textarea {
     top: 0;
     left: 0;
     padding-top: 20px;
+    background-color: #00246B;
 }
 
 textarea {
     margin-top: 10px;
     width: 100%;
+    background-color: #763626;
 }
 
 #output {
@@ -53,11 +56,11 @@ textarea {
 
 
 .btn-icon {
-    padding: 0.5rem 1rem; /* Adjust padding as needed */
+    padding: 0.5rem 1rem; 
 
-    height: 2.5rem; /* Button height */
-    width: 2.5rem; /* Button width */
-    font-size: 1.5rem; /* Font size for the icon */
+    height: 2.5rem; 
+    width: 2.5rem;
+    font-size: 1.5rem; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -65,34 +68,15 @@ textarea {
 
 .icon {
     display: inline-block;
-    font-size: 1.5rem; /* Size of the + icon */
 }
 
-.container-fluid {
-    padding: 0; /* Remove default container padding */
+.active {
+    background-color: #28334AFF;
+    color: #90AFC5;
+    border-radius: 2px;
 }
 
-.row {
-    height: 100%; /* Full height of the container */
-}
-
-.col {
-    display: flex;
-    align-items: center; /* Center items vertically */
-}
-
-.text-left {
-    text-align: left; /* Align text to the left within its column */
-}
-
-.icon {
-    font-size: 1.5rem; /* Adjust icon size */
-}
-
-.mr-3 {
-    margin-right: 1rem; /* Space between icons */
-}
-
-:root {
-    --bs-primary: #da07fa; /* Change this to your desired color */
+.active:hover {
+    background-color: #28334AFF;
+    color: #90AFC5;
 }
